# Chunky-Challenge

./: Cargo.toml  README.md  build_android_arm.sh  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/nl/couch_chilis/chunky_challenge/: MainActivity.java
assets/levels/: level000  level002  level003  level004  level005  level006  level007  level008  level009  level011  level012  level013  level014  level015  level016  level017  level018  level019  level020  level021  level022  level023  level025  level026  level027  level029  level030  level031  level032  level033  level034  level035  level036  level037  level038  level039  level040  level041  level043  level044  (+32 more)
src/: background.rs  constants.rs  editor.rs  game_object.rs  game_state.rs  gameover.rs  level.rs  levels.rs  lib.rs  main.rs  menu.rs  timers.rs  ui.rs  ui_state.rs  utils.rs
src/editor/: button.rs  editor_bundle.rs  editor_button.rs  editor_component.rs  editor_system.rs  number_input.rs  object_selector.rs  object_selector_bundle.rs  object_selector_system.rs
src/game_object/: assets.rs  behaviors.rs  collision_object.rs  collission_object.rs  components.rs  object_bundles.rs  object_type.rs
src/ui/: controls_overlay.desktop.rs  controls_overlay.mobile.rs  gameover.rs  menu.rs  overlays.desktop.rs  overlays.mobile.rs  ui_assets.rs  ui_state.rs
