[package]
name = "chunky-challenge"
version = "0.1.0"
edition = "2024"

[lib]
name = "chunky_challenge"
path = "src/lib.rs"
crate-type = [
    "staticlib",
    "cdylib",    # needed for Android
    "rlib",      # rlib needed for running locally
]

[[bin]]
name = "chunky_challenge"
path = "src/main.rs"

[dependencies]
anyhow = "1"
bevy = { version = "0.17", default-features = false, features = [
    "android_shared_stdcxx",
    "animation",
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gltf",
    "bevy_log",
    "bevy_pbr",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_render",
    "bevy_window",
    "bevy_winit",
    "jpeg",
    "png",
    "wayland",
    "x11",
] }
image = { version = "0.25", default-features = false, features = ["png"] }
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
winit = "0.30"

[build-dependencies]
embed-resource = "1.6.3"

[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.6", features = ["game-activity"] }

[patch.crates-io]
android-activity = { git = "https://github.com/damus-io/android-activity", rev = "a8948332c7c551303d32eb26a59d0abd676e47a5" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
opt-level = "s"
panic = "abort"
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
